[package]
name = "bevy_skybox"
description = "A skybox from an image for bevyengine.org"
categories = ["game-development"]
keywords = ["bevy", "skybox", "gamedev", "graphics"]
version = "0.4.0"
authors = ["Jonathan Lawn <Jonathan.M.Lawn@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/bevy_skybox/"
repository = "https://github.com/jomala/bevy_skybox/"
edition = "2018"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[features]
default = []
fly_camera = ["bevy_fly_camera"]

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = ["png"] }
bevy_fly_camera = { version = "0.7", default-features = false, optional = true }
image = "0.23"
itertools = "0.10"

[dev-dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false, features = [
    "x11",
    "render",
    "bevy_wgpu",
    "bevy_winit",
    "dynamic",
    "png",
]}
bevy_log = "0.5"
rand = "0.8"

[[example]]
name = "board_flyover"
required-features = ["fly_camera"]

# Added bevy_main
[patch.crates-io]
bevy_fly_camera = { git = "https://github.com/slyedoc/bevy_fly_camera", default-features = false, optional = true }