[package]
name = "bevy_skybox"
description = "A skybox from an image for bevyengine.org"
categories = ["game-development"]
keywords = ["bevy", "skybox", "gamedev", "graphics"]
version = "0.4.0"
authors = ["Jonathan Lawn <Jonathan.M.Lawn@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/bevy_skybox/"
repository = "https://github.com/jomala/bevy_skybox/"
edition = "2018"
include = ["src/**/*", "README.md", "CHANGELOG.md"]

[dependencies]
bevy = { version = "0.5", default-features = false, features = ["png"] }
image = "0.23"
itertools = "0.10"

[dev-dependencies]
bevy = "0.5"
bevy_log = "0.5"
rand = "0.8"
bevy_fly_camera = "0.7"

[[example]]
name = "board_flyover"

# Added bevy_main
[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main" }
#bevy_fly_camera = { git = "https://github.com/slyedoc/bevy_fly_camera" }
bevy_fly_camera = { path = "../bevy_fly_camera" }
